[tool.poetry]
name = "ao3-scrape"
version = "0.1.0"
description = ""
authors = ["Max Niederman <max@maxniederman.com>"]
readme = "README.md"
packages = [{include = "ao3_scrape"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
httpx = "^0.24.1"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
