[tool.poetry]
name = "ao3-scrape"
version = "0.1.0"
description = ""
authors = ["Max Niederman <max@maxniederman.com>"]
readme = "README.md"
packages = [{include = "ao3_scrape"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
typer = {extras = ["all"], version = "^0.9.0"}
aiohttp = {extras = ["speedups"], version = "^3.8.5"}
prometheus-client = "^0.17.1"
certifi = "^2023.7.22"

[tool.poetry.scripts]
ao3-scrape = "ao3_scrape:__main__.app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
